--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>首页</title>
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.14/vue.min.js"></script>
 </head>
 <body>
-  hello world
+  <div id="app">
+    <p> public repos</p>
+    <ul>
+      <li v-for="(item,index) of arr">
+        <a :href="item.html_url">{{item.name}}</a>
+      </li>
+    </ul>
+  </div>
+  <script>
+    new Vue({
+      el:'#app',
+      data:{
+        arr:[]
+      },
+      mounted(){
+        axios({
+          url:'https://api.github.com/users/linkroutes/repos',
+        }).then((data)=>{
+          let rawData = data.data;
+          console.log(rawData);
+          this.arr = rawData
+        }).catch((err)=>{
+          console.log(err);
+        })
+      }
+    })
+  </script>
 </body>
 </html>
