--- a/h5/sanhe/index.html
+++ b/h5/sanhe/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Guo力max新男神即将诞生，快来看看他的真面目!"/>
   <script>!function(a){var b,c;/Android (\d+\.\d+)/.test(navigator.userAgent)?(b=parseFloat(RegExp.$1),b>2.3?(c=parseInt(window.screen.width)/a,document.write('<meta name="viewport" content="width='+a+",minimum-scale="+c+",maximum-scale="+c+', target-densitydpi=device-dpi">')):document.write('<meta name="viewport" content="width='+a+',target-densitydpi=device-dpi">')):document.write('<meta name="viewport" content="width='+a+',user-scalable=no,target-densitydpi=device-dpi,minimal-ui">')}(640);</script>
   <link rel="stylesheet" href="./all.css">
-  <script src="http://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body>
   <div class="wxshare-wrap">
@@ -457,11 +457,11 @@
     </div>
   </div>
   <script>
-    var INTF = 'http://www.chinasanho.com/chinasanho/Index/add_user';
+    // var INTF = 'http://www.chinasanho.com/chinasanho/Index/add_user';
   </script>
   <script src="./lib/swiper3.0.6.min.js"></script>
   <script src="./index.js"></script>
-  <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+  <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <!-- <script id="DS_PRE_JS" src="http://cdn.datastory.com.cn/js/pre-ds-min.js?dsTid=95d8bed4-c7de-4598-9290-f7b1e2e13385"></script> -->
   <script>
     // $.ajax({
